format response of ai